--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,83 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&amp;display=swap");
-/*
-Template Name: Deskoto - HelpDesk and Knowledge Base HTML Template
-Template URI: http://pixner.net/deskoto/
-Author: uiaxis
-Author URI: https://themeforest.net/user/uiaxis
-Description: Deskoto - HelpDesk and Knowledge Base HTML Template. Mosto is a Pixel-Perfect Powerful,
-Mordern HelpDesk and Knowledge Base HTML Template for all types of Help & knoledge based website.
-Version: 1.0.0
-Text Domain: 
-*/
-/*
-///// CSS Index \\
-01. Reset CSS Start
----------------------------
-02. General CSS
----------------------------
-03. Section Header CSS
----------------------------
-04. Social Icons CSS
----------------------------
-05. Header Section CSS
----------------------------
-06. Banner One CSS
-----Banner Two CSS
-----Banner Three CSS
-----Banner Six CSS
----------------------------
-07. Hero Section CSS
----------------------------
-08. How Search Section CSS
-----How Section Two CSS
----------------------------
-09. Billing Section CSS
----------------------------
-10. Category  Section CSS
----------------------------
-11. Caterogy Single CSS
-----Category Single Two CSS
----------------------------
-12. Have Question CSS
----------------------------
-13. Knowledge Section CSS
----------------------------
-14. Popular Section CSS
----------------------------
-15. Call In  Section CSS
----------------------------
-16. Question  Section CSS
----------------------------
-17. Looking  Section CSS
----------------------------
-18. Pricing  Section CSS
----------------------------
-19. Getting  Section CSS
----------------------------
-20. Faq Section Section CSS
----------------------------
-21. Changelog  Section CSS
----------------------------
-22. Knowledge Based Single Section CSS
----------------------------
-23. Error Section CSS
----------------------------
-24. Team Section CSS
----------------------------
-25. Client Section CSS
----------------------------
-26. Contact Section CSS
----------------------------
-27. All Animations  CSS
----------------------------
-*/
-/*! HTML5 Boilerplate v7.0.1 | MIT License | https://html5boilerplate.com/ */
-/* main.css 1.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
@@ -5053,4 +4975,14 @@ footer {
         -webkit-transform: scale(1, 1);
         opacity: 0;
     }
+}
+.navlist a:hover{
+     color: #5900ff !important;
+        background: #ffffff;
+        border-radius: 20px;
+}
+.navactive a{
+     color: #5900ff !important;
+        background: #ffffff;
+        border-radius: 20px;
 }
