chnages on contact us and about us page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4986,3 +4986,9 @@ footer {
         background: #ffffff;
         border-radius: 20px;
 }
+.aboutcontent{
+text-align: left;
+}
+.contactinfo{
+    text-align: center;
+}
